--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body {
     text-align: center;
     position: center;
     background-color: #E3F0FB;
-    background: url(pattern.gif) repeat #F5F5E9;
 }
 
 #Click: hover {
@@ -51,5 +50,6 @@ body {
     border-style: solid;
     border-color: gray;
     border-width: 10px;
+    height:200px;
 }
 
